# ai-tranning-hub

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prompt-02-ingestao-perfil-atleta.md  prompt-athlete-ai-training-hub.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_planning_tables.py  0003_local_embeddings_dim.py  0004_athlete_profile_anamnese.py  0005_workout_extra_jsonb.py  0006_athlete_twin_seed.py  0007_workout_planned_source_plan.py  0008_workout_planned_adjustment.py  0009_garmin_connection.py  0010_sso_invites.py
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  logging.py  middleware.py  security.py  tenant.py
backend/app/jobs/: _run.py  celery_app.py  embedding_job.py  garmin_job.py  import_job.py  metrics_job.py  profile_job.py
backend/app/models/: __init__.py  ai.py  athlete.py  audit.py  base.py  enums.py  garmin.py  invite.py  knowledge.py  metrics.py  race.py  training_plan.py  types.py  workout.py
backend/app/repositories/: ai_repo.py  athlete_repo.py  base.py  garmin_repo.py  metrics_repo.py  plan_repo.py  workout_repo.py
backend/app/schemas/: ai.py  athlete.py  auth.py  calendar.py  garmin.py  jobs.py  metrics.py  onboarding.py  planning.py  race.py  streams.py  workout.py
backend/app/scripts/: analyze_athlete.py  garmin_pilot_smoke.py  import_athlete.py  sample_import.py  seed.py  (+1 more)
web/: README.md  (+11 more)
(+356 files in other folders)
